--- a/homework/2/webapps/calculator/static/calculator/calculator.css
+++ b/homework/2/webapps/calculator/static/calculator/calculator.css
@@ -21,7 +21,6 @@ input {
     color: black;
     padding: 25px 32px;
     text-align: right;
-    text-color: black;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
@@ -44,6 +43,6 @@ form {
 }
 
 button:hover {
-    background-color: white; /* Green */
+    background-color: white;
     color: black;
 }
