--- a/homework/3/webapps/grumblr/templates/grumblr/profile.html
+++ b/homework/3/webapps/grumblr/templates/grumblr/profile.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -12,15 +13,15 @@
 	    <title>15637 Homework 1</title>
 	    
 	    <!-- Bootstrap core CSS -->
-	    <link href="../../../../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	    <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 	    
 	    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	    <link href="../../../../bootstrap/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+	    <link href="{% static 'bootstrap/docs/assets/css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
 	    
 	    <!-- Custom styles for this template -->
-    	<link href="./css/profile.css" rel="stylesheet">
+    	<link href="{% static 'css/profile.css' %}" rel="stylesheet">
     	
-    	<script src="../../../../bootstrap/docs/assets/js/ie-emulation-modes-warning.js"></script>
+    	<script src="{% static 'bootstrap/docs/assets/js/ie-emulation-modes-warning.js' %}"></script>
     	
 	</head>
 	
@@ -43,8 +44,8 @@
 			        </ul> -->
 					<form class="navbar-form navbar-right">
 			            <input type="text" class="form-control" placeholder="Search...">
-			   			<img src="images/search_white.png" width="25" height="25">
-			   			<img src="images/account.png" width="25" height="25">
+			   			<img src="{% static 'images/search_white.png' %}" width="25" height="25">
+			   			<img src="{% static 'images/account.png' %}" width="25" height="25">
 			   			<a id="username" href="./profile.html">Michael Jackson</a></li>
 			        </form>
 			    </div><!--/.nav-collapse -->
@@ -57,7 +58,7 @@
 				<div class="col-xs-6 col-sm-6 sidebar-offcanvas" id="profile">
 					<div class="row row-offcanvas row-offcanvas-right">
 						<div class="col-xs-8 col-sm-8">
-							<img src="images/profile_picture.jpg" height="180px" width="300px" id="profile_picture">
+							<img src="{% static 'images/profile_picture.jpg' %}" height="180px" width="300px" id="profile_picture">
 						</div>
 						
 						<div class="col-xs-4 col-sm-4">
@@ -73,7 +74,7 @@
 		    <div class="row">
 				<div class="col-xs-6 col-sm-6 sidebar-offcanvas" id="sidebar">
 		          	<div class="list-group">
-		            	<a href="#" class="list-group-item active"><img id="friendsearch" src="images/account.svg" width="35" height="35">        Info</a>
+		            	<a href="#" class="list-group-item active"><img id="friendsearch" src="{% static 'images/account.svg' %}" width="35" height="35">        Info</a>
 		            </div>
 		            <div id="info">
 		            	<h5>From: Pittsburgh</h5>
@@ -113,8 +114,8 @@
 	    <!-- Placed at the end of the document so the pages load faster -->
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-	    <script src="../../../../bootstrap/dist/js/bootstrap.min.js"></script>
+	    <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
 	    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	    <script src="../../../../bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+	    <script src="{% static 'bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js' %}"></script>
 	</body>
 </html>
