implemented all functions, need far more fine tune

--- a/homework/3/webapps/grumblr/templates/grumblr/login.html
+++ b/homework/3/webapps/grumblr/templates/grumblr/login.html
@@ -10,7 +10,7 @@
 	    <meta name="author" content="Zhiqiao Lin">
 	    <link rel="icon" href="./images/favicon.ico">
 	    
-	    <title>15637 Homework 1</title>
+	    <title>Grumblr Login</title>
 	    
 	    <!-- Bootstrap core CSS -->
 	    <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
