--- a/homework/3/webapps/grumblr/static/css/mainpage.css
+++ b/homework/3/webapps/grumblr/static/css/mainpage.css
@@ -18,8 +18,9 @@ body {
 }
 
 .navbar .navbar-brand {
-  color: #333300;
+  color: #ddd;
 }
+
 
 .list-group {
   margin-left: 30px;
@@ -37,4 +38,9 @@ body {
   position: absolute;
   top:7px;
   right:5px;
+}
+
+.time {
+    color: #999;
+    padding-right: 5px;
 }
