--- a/homework/3/webapps/grumblr/static/css/profile.css
+++ b/homework/3/webapps/grumblr/static/css/profile.css
@@ -17,41 +17,47 @@ body {
 }
 
 .nav .navbar-nav .navbar-right li a {
-  color: #333300;
+    color: #333300;
 }
 
 .navbar .navbar-brand {
-  color: #333300;
+    color: #333300;
 }
 
 .list-group {
-  margin-left: 30px;
+    margin-left: 30px;
 }
 
 .list-group-item.active {
-  background-color: #0085ff;
+    background-color: #0085ff;
 }
 
+.time {
+    color: #999;
+    padding-left: 15px;
+}
 
 #username {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 #profile_picture, #info {
-  padding-left: 30px;
+    padding-left: 30px;
+    padding-top: 50px;
+    height="180px" width="300px"
 }
 
 #name {
-  color: white;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;  
+    color: white;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 
-  position: absolute;
-  top: 150px;
-  right:15px;
+    position: absolute;
+    top: 150px;
+    right:15px;
 }
 
 #sidebar {
