--- a/homework/3/webapps/grumblr/templates/grumblr/mainpage.html
+++ b/homework/3/webapps/grumblr/templates/grumblr/mainpage.html
@@ -10,7 +10,7 @@
 	    <meta name="author" content="Zhiqiao Lin">
 	    <link rel="icon" href="./images/favicon.ico">
 	    
-	    <title>15637 Homework 1</title>
+	    <title>Grumblr Global Stream</title>
 	    
 	    <!-- Bootstrap core CSS -->
 	    <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -35,7 +35,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="./login.html">Grumblr</a>
+					<a class="navbar-brand" href="/grumblr/">Grumblr</a>
 				</div>
 
 				<div id="navbar" class="collapse navbar-collapse">
@@ -46,7 +46,7 @@
 			            <input type="text" class="form-control" placeholder="Search...">
 			   			<img src="{% static 'images/search_white.png' %}" width="25" height="25">
 			   			<img src="{% static 'images/account.png' %}" width="25" height="25">
-			   			<a id="username" href="profile">{{ user_name }}</a>
+			   			<a id="username" href="/grumblr/profile/{{ request.user.username }}">{{ user.first_name }} {{ user.last_name }} </a>
 						<a href="logout" class="btn btn-info">Sign out</a>
 			        </form>
 			    </div><!--/.nav-collapse -->
@@ -57,12 +57,11 @@
 
 
 			<div class="row row-offcanvas row-offcanvas-right">
-
 		        <div class="col-xs-12 col-sm-8 blog-main">
 					<form method="post" action="{% url 'post' %}">
 						<div class="row row-offcanvas">
-							<div class="col-xs-11 col-sm-11 blog-main">
-								<input type="text" class="form-control" placeholder="Say something..." name="post">
+							<div class="col-xs-10 col-sm-10 blog-main">
+								<input type="text" class="form-control" placeholder="Say something..." name="post" maxlength="42">
 							</div>
 							<div class="col-xs-1 col-sm-1 blog-main">
 								<input type="submit" class="btn btn-primary" value="Post">
@@ -73,18 +72,13 @@
 
 					{% for post in posts %}
 					<div class="blog-post">
-						<a href="/grumblr/profile/{{post.id}}">{{ user_name }}</a>
+						<span><a href="/grumblr/profile/{{post.user.username}}">{{ post.user.first_name }} {{ post.user.last_name }}</a></span>
+						<span class="time">{{post.time}}</span>
 						<p>{{ post }}</p>
 						<a class="btn btn-default" href="#" role="button">Like</a>
 					</div>
 					<hr>
 					{% endfor %}
-
-					<div class="blog-post">
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-						<p><a class="btn btn-default" href="#" role="button">Like</a></p>
-					</div>
-					<hr>
 		      </div><!--/.col-xs-12.col-sm-9-->
 		
 		      <div class="col-xs-6 col-sm-4 sidebar-offcanvas" id="sidebar">
