--- a/homework/3/webapps/grumblr/templates/grumblr/profile.html
+++ b/homework/3/webapps/grumblr/templates/grumblr/profile.html
@@ -10,7 +10,7 @@
 	    <meta name="author" content="Zhiqiao Lin">
 	    <link rel="icon" href="./images/favicon.ico">
 	    
-	    <title>15637 Homework 1</title>
+	    <title>Grumblr Profile</title>
 	    
 	    <!-- Bootstrap core CSS -->
 	    <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -35,19 +35,20 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="./mainpage.html">Grumblr</a>
+					<a class="navbar-brand" href="/grumblr/mainpage">Grumblr</a>
 				</div>
+
 				<div id="navbar" class="collapse navbar-collapse">
-					
 					<!-- <ul class="nav navbar-nav navbar-right">
-			            <li><a href="#contact">Michael Jacson</a></li>
+			            <li><a href="#contact">Michael Jackson</a></li>
 			        </ul> -->
 					<form class="navbar-form navbar-right">
 			            <input type="text" class="form-control" placeholder="Search...">
 			   			<img src="{% static 'images/search_white.png' %}" width="25" height="25">
 			   			<img src="{% static 'images/account.png' %}" width="25" height="25">
-			   			<a id="username" href="./profile.html">Michael Jackson</a></li>
+			   			<a id="username" href="/grumblr/profile/{{ request.user.username }}">{{ request.user.first_name }} {{ request.user.last_name }}</a>
 			        </form>
+
 			    </div><!--/.nav-collapse -->
 			</div>
 		</nav>
@@ -58,11 +59,11 @@
 				<div class="col-xs-6 col-sm-6 sidebar-offcanvas" id="profile">
 					<div class="row row-offcanvas row-offcanvas-right">
 						<div class="col-xs-8 col-sm-8">
-							<img src="{% static 'images/profile_picture.jpg' %}" height="180px" width="300px" id="profile_picture">
+							<img src="{% static 'images/profile_picture.jpg' %}" id="profile_picture">
 						</div>
 						
 						<div class="col-xs-4 col-sm-4">
-							<h4 id="name"> Michael Jackson </h4>
+							<h4 id="name"> {{ user.first_name }} {{ user.last_name }} </h4>
 						</div>
 					</div>
 				</div>
@@ -84,29 +85,26 @@
 		            </div>
 		            
 		      	</div><!--/.profile info-->
-		      	
-		        <div class="col-xs-6 col-sm-6 blog-main">
-			        <div class="blog-post">
-			            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			            <p><a class="btn btn-default" href="#" role="button">Like</a></p>
-			        </div>
-			        <hr>
-			        <div class="blog-post">
-			            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			            <p><a class="btn btn-default" href="#" role="button">Like</a></p>
-			        </div>
-			        <hr>
-			        <div class="blog-post">
-			            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			            <p><a class="btn btn-default" href="#" role="button">Like</a></p>
-			        </div>
-			        <hr>
-		      	</div><!--/.blog posts-->
-		
-		      
-	      </div><!--/row-->
-	
-	
+
+				<div class="col-xs-6 col-sm-6 blog-main">
+					{% for post in posts %}
+					<form method="post" action="/grumblr/delete/{{post.id}}" >
+						<div class="blog-post">
+							<span><a href="/grumblr/profile/{{post.user.username}}">{{ post.user.first_name }} {{ post.user.last_name }}</a></span>
+							<span class="time">{{post.time}}</span>
+							<p>{{ post }}</p>
+							<span class="btn btn-default" href="#" role="button">Like</span>
+							{% if request.user.username == user.username %}
+							<span> <input type="submit" class="btn btn-danger delete-btn" value="Delete"></span>
+							{% endif %}
+						</div>
+						<hr>
+						{% csrf_token %}
+					</form>
+					{% endfor %}
+				</div>
+
+	      	</div><!--/row-->
 	    </div><!--/.container-->
 				
 		<!-- Bootstrap core JavaScript
