--- a/homework/3/webapps/grumblr/templates/grumblr/mainpage.html
+++ b/homework/3/webapps/grumblr/templates/grumblr/mainpage.html
@@ -59,7 +59,7 @@
 			<div class="row row-offcanvas row-offcanvas-right">
 		        <div class="col-xs-12 col-sm-8 blog-main">
 					<form method="post" action="{% url 'post' %}">
-						<div class="row row-offcanvas">
+						<div class="row row-offcanvas" id="post_row">
 							<div class="col-xs-10 col-sm-10 blog-main">
 								<input type="text" class="form-control" placeholder="Say something..." name="post" maxlength="42">
 							</div>
