--- a/homework/3/webapps/grumblr/static/css/mainpage.css
+++ b/homework/3/webapps/grumblr/static/css/mainpage.css
@@ -21,6 +21,11 @@ body {
   color: #ddd;
 }
 
+.time {
+    color: #999;
+    padding-left: 15px;
+}
+
 
 .list-group {
   margin-left: 30px;
@@ -28,6 +33,10 @@ body {
 
 .list-group-item.active {
   background-color: #0085ff;
+}
+
+.blog-post {
+    padding-top: 10px;
 }
 
 #username {
@@ -40,7 +49,6 @@ body {
   right:5px;
 }
 
-.time {
-    color: #999;
-    padding-right: 5px;
+#post_row {
+    padding: 15px;
 }
