--- a/homework/4/webapps/grumblr/templates/grumblr/edit_profile.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/edit_profile.html
@@ -1,10 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "grumblr/base.html" %}
+{% load static %}
+{% block title %}Grumblr Edit Profile{% endblock %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/signup.css' %}">
+{% endblock %}
+{% block description %}<meta name="description" content="Edit Profile">{% endblock %}
+{% block content %}
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target = "#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="/grumblr/mainpage">Grumblr</a>
+		</div>
 
-</body>
-</html>
+		<div id="navbar" class="collapse navbar-collapse">
+			<form class="navbar-form navbar-right">
+				<input type="text" class="form-control" placeholder="Search...">
+				<img src="{% static 'images/search_white.png' %}" width="25" height="25">
+				<img src="{% static 'images/account.png' %}" width="25" height="25">
+				<a id="username" href="/grumblr/profile/{{ request.user.username }}">{{ request.user.first_name }} {{ request.user.last_name }}</a>
+			</form>
+
+		</div><!--/.nav-collapse -->
+	</div>
+</nav>
+
+
+<div class="container">
+	<div class="row">
+		{% for error in form.non_field_errors %}
+		<p style="color: red">
+		{{ error }}
+		</p>
+		{% endfor %}
+
+		<form enctype="multipart/form-data" method="post" class="col-sm-6 form-signin" action="/grumblr/edit_profile/{{request.user.username}}">
+			<div class="row">
+				<div class="col-xs-12 col-lg-12">
+					<label for="inputFirstName">FirstName</label>
+					<input id="inputFirstName" class="form-control"  name="first_name" value="{{request.user.first_name}}" required autofocus>
+				</div>
+			</div>
+            <div class="row">
+				<div class="col-xs-12 col-lg-12">
+					<label for="inputLastName">LastName</label>
+					<input id="inputLastName" class="form-control" placeholder="Last Name" name="last_name" value="{{request.user.last_name}}" required >
+				</div>
+            </div>
+            <div class="row">
+				<div class="col-xs-12 col-lg-12">
+					<label for="inputAge">Age</label>
+					<input id="inputAge" class="form-control" placeholder="Age" name="age" value="{{profile.age}}" required >
+				</div>
+			</div>
+            <div class="row">
+				<div class="col-xs-12 col-lg-12">
+					<label for="inputBio">Bio</label>
+					<textarea id="inputBio" rows="3" class="form-control" placeholder="Short Bio" name="bio">{{profile.bio}}</textarea>
+				</div>
+			</div>
+            <div class="row">
+				<div class="col-xs-12 col-lg-12">
+					<label for="picture">Profile Picture</label>
+					<input id="picture"  class="form-control" placeholder="Short Bio" name="picture" type="file"></input>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12 col-lg-12">
+					<input class="btn btn-lg btn-success btn-block" type="submit" value="Submit">
+				</div>
+			</div>
+
+			{% csrf_token %}
+		</form><!-- form -->
+
+        <form method="post" class="col-sm-6 form-signin" action="/grumblr/edit_profile/{{request.user.username}}">
+            <input id="inputPassword" type="password" class="form-control" placeholder="New Password" name="password" required >
+            <input id="confirmPassword" type="password" class="form-control" placeholder="Confirm Password" name="confirm_password" required >
+             <div class="col-xs-12 col-lg-12">
+                <input class="btn btn-lg btn-success btn-block" type="submit" value="Change Password">
+            </div>
+        </form>
+
+
+
+	</div><!-- row -->
+</div> <!-- container -->
+
+
+
+{% endblock %}
