--- a/homework/4/webapps/grumblr/templates/grumblr/profile.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/profile.html
@@ -19,9 +19,6 @@
 		</div>
 
 		<div id="navbar" class="collapse navbar-collapse">
-			<!-- <ul class="nav navbar-nav navbar-right">
-				<li><a href="#contact">Michael Jackson</a></li>
-			</ul> -->
 			<form class="navbar-form navbar-right">
 				<input type="text" class="form-control" placeholder="Search...">
 				<img src="{% static 'images/search_white.png' %}" width="25" height="25">
@@ -44,7 +41,11 @@
 		<div class="col-xs-12 col-sm-6 sidebar-offcanvas" id="sidebar">
 			<div class="row">
 				<div class="col-xs-8 col-sm-8">
+					{% if profile.picture.name %}
+					<img src="{% url 'photo' user.username %}" id="profile_picture">
+					{% else %}
 					<img src="{% static 'images/profile_picture.jpg' %}" id="profile_picture">
+					{% endif %}
 				</div>
 
 				<div class="col-xs-4 col-sm-4">
@@ -54,18 +55,20 @@
 			<br>
 
 			<div class="list-group" id="info_bar">
-				<div class="list-group-item active"><img id="friendsearch" src="{% static 'images/account.svg' %}" width="35" height="35">Info{% if request.user.username == user.username %}<div class="btn btn-default" href="/grumblr/edit_profile" role="button">Edit Profile</div>{% endif %}</div>
+				<div class="list-group-item active"><img id="friendsearch" src="{% static 'images/account.svg' %}" width="35" height="35">Info
+					{% if request.user.username == user.username %}
+					<a class="btn btn-default" href="{% url 'go_edit' %}">Edit Profile</a>
+					{% else %}
+					<div class="btn btn-warning" href="/grumblr/profile">Follow</div>
+					{% endif %}
+				</div>
 			</div>
 
 			<div id="info">
 				<h5>First Name: {{user.first_name}}</h5>
 				<h5>Last Name: {{user.last_name}}</h5>
 				<h5>Age: {{profile.age}}</h5>
-				<h5>From: Pittsburgh</h5>
-				<h5>Education: Carnegie Mellon</h5>
-				<h5>Email: jacsonm@andrew.cmu.edu</h5>
-				<h5>Tel: (412)542-9583</h5>
-				<h4>Bio:</h4>
+				<h5>Bio:</h5>
 				<p> {{profile.bio}} </p>
 			</div>
 
