--- a/homework/4/webapps/grumblr/templates/grumblr/profile.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/profile.html
@@ -58,8 +58,10 @@
 				<div class="list-group-item active"><img id="friendsearch" src="{% static 'images/account.svg' %}" width="35" height="35">Info
 					{% if request.user.username == user.username %}
 					<a class="btn btn-default" href="{% url 'go_edit' %}">Edit Profile</a>
+					{% elif not followed %}
+					<div class="btn btn-info" href="{% url 'follow' post.user.username %}">Follow</div>
 					{% else %}
-					<div class="btn btn-warning" href="/grumblr/profile">Follow</div>
+				<a class="btn btn-warning" href="/grumblr/unfollow/{{post.user.username}}" role="button">Unfollow</a>
 					{% endif %}
 				</div>
 			</div>
@@ -76,9 +78,9 @@
 
 		<div class="col-xs-12 col-sm-6 blog-main">
 			{% for post in posts %}
-			<form method="post" action="/grumblr/delete/{{post.id}}" >
+			<form method="post" action="{% url 'delete' post.id %}" >
 				<div class="blog-post">
-					<span><a href="/grumblr/profile/{{post.user.username}}">{{ post.user.first_name }} {{ post.user.last_name }}</a></span>
+					<span><a href="{% url 'profile' post.user.username %}">{{ post.user.first_name }} {{ post.user.last_name }}</a></span>
 					<span class="time">{{post.time}}</span>
 					<p>{{ post }}</p>
 					<span class="btn btn-default" href="#" role="button">Like</span>
