--- a/homework/4/webapps/grumblr/templates/grumblr/signup.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/signup.html
@@ -46,6 +46,7 @@
 				</div>
 			</div>
 			<input id="inputUsername" class="form-control" placeholder="Username" name="username" required>
+			<input id="inputEmail" type="email" class="form-control" placeholder="Email" name="email" required >
 			<input id="inputPassword" type="password" class="form-control" placeholder="Password" name="password" required >
 			<input id="confirmPassword" type="password" class="form-control" placeholder="Confirm Password" name="confirm_password" required >
 
