--- a/homework/4/webapps/grumblr/templates/grumblr/login.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/login.html
@@ -59,7 +59,7 @@
 							<input type="checkbox" value="remember-me"> Remember me
 						</label>
 					</div>
-					<p><a href="#">Forgot Password?</a></p>
+					<p><a href="{% url 'go_reset' %}">Forgot Password?</a></p>
 				</div>
 				<div class="col-xs-12 col-lg-6">
 					<input value="Sign in" class="btn btn-lg btn-primary btn-block" type="submit">
