fixed some href link bugs, added small profile picture next to every post. Need further testing

--- a/homework/4/webapps/grumblr/static/css/profile.css
+++ b/homework/4/webapps/grumblr/static/css/profile.css
@@ -48,6 +48,11 @@ body {
     width : 385px;
 }
 
+#small_profile_picture {
+    height : 45px;
+    width : 45px;
+}
+
 #name {
     color: white;
     text-shadow:
