--- a/homework/4/webapps/grumblr/templates/grumblr/follower_stream.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/follower_stream.html
@@ -38,6 +38,13 @@
 			{% for post in posts %}
 			<div class="blog-post">
 				<span><a href="/grumblr/profile/{{post.user.username}}">{{ post.user.first_name }} {{ post.user.last_name }}</a></span>
+				<span>
+					{% if post.user.profile.picture.name %}
+					<img src="{% url 'photo' post.user.username %}" id="small_profile_picture">
+					{% else %}
+					<img src="{% static 'images/profile_picture.jpg' %}" id="small_profile_picture">
+					{% endif %}
+				</span>
 				<span class="time">{{post.time}}</span>
 				<p>{{ post }}</p>
 				<a class="btn btn-warning" href="{% url 'unfollow' post.user.username %}" role="button">Unfollow</a>
