--- a/homework/4/webapps/grumblr/templates/grumblr/login.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/login.html
@@ -14,11 +14,11 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/grumblr/mainpage">Grumblr</a>
+			<a class="navbar-brand" href="{% url 'home' %}">Grumblr</a>
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<div class="navbar-form navbar-right">
-				<a href="register" class="btn btn-success">Sign Up</a>
+				<a href="{% url 'register' %}" class="btn btn-success">Sign Up</a>
 			</div>
 		</div><!--/.nav-collapse -->
 	</div>
