--- a/homework/4/webapps/grumblr/templates/grumblr/mainpage.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/mainpage.html
@@ -15,7 +15,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/grumblr/">Grumblr</a>
+			<a class="navbar-brand" href="{% url 'home' %}">Grumblr</a>
 		</div>
 
 		<div id="navbar" class="collapse navbar-collapse">
@@ -23,8 +23,8 @@
 				<input type="text" class="form-control" placeholder="Search...">
 				<img src="{% static 'images/search_white.png' %}" width="25" height="25">
 				<img src="{% static 'images/account.png' %}" width="25" height="25">
-				<a id="username" href="/grumblr/profile/{{ request.user.username }}">{{ user.first_name }} {{ user.last_name }} </a>
-				<a href="logout" class="btn btn-info">Sign out</a>
+				<a id="username" href="{% url 'profile' request.user.username %}">{{ user.first_name }} {{ user.last_name }} </a>
+				<a href="{% url 'logout' %}" class="btn btn-info">Sign out</a>
 			</form>
 		</div><!--/.nav-collapse -->
 	</div>
@@ -34,10 +34,15 @@
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12 col-sm-8 blog-main">
 			<span><a class="btn btn-primary" href="{% url 'follower_stream' request.user.username %}" role="button">Go To Follower Stream</a></span>
+			{% for error in form.non_field_errors %}
+			<p style="color: red">
+			{{ error }}
+			</p>
+			{% endfor %}
 			<form method="post" action="{% url 'post' %}">
 				<div class="row row-offcanvas" id="post_row">
 					<div class="col-xs-10 col-sm-10 blog-main">
-						<input type="text" class="form-control" placeholder="Say something..." name="post" maxlength="42">
+						<input type="text" class="form-control" placeholder="Say something..." name="post" maxlength="42" required>
 					</div>
 					<div class="col-xs-1 col-sm-1 blog-main">
 						<input type="submit" class="btn btn-primary" value="Post">
