--- a/homework/4/webapps/grumblr/templates/grumblr/reset_password_form.html
+++ b/homework/4/webapps/grumblr/templates/grumblr/reset_password_form.html
@@ -15,11 +15,11 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/grumblr/mainpage">Grumblr</a>
+			<a class="navbar-brand" href="{% url 'home' %}">Grumblr</a>
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<div class="navbar-form navbar-right">
-				<a href="mainpage" class="btn btn-success">Sign In</a>
+				<a href="{% url 'home' %}" class="btn btn-success">Sign In</a>
 			</div>
 		</div>
 	</div>
