--- a/homework/5/webapps/grumblr/templates/grumblr/mainpage.html
+++ b/homework/5/webapps/grumblr/templates/grumblr/mainpage.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/mainpage.css' %}">
 {% endblock %}
 {% block description %}<meta name="description" content="Main page">{% endblock %}
+{% block js %}
+    <script src="{% static 'js/global_stream.js' %}" type="text/javascript"></script>
+{% endblock %}
 {% block content %}
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
@@ -15,7 +18,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/grumblr/">Grumblr</a>
+			<a class="navbar-brand" href="{% url 'home' %}">Grumblr</a>
 		</div>
 
 		<div id="navbar" class="collapse navbar-collapse">
@@ -23,8 +26,8 @@
 				<input type="text" class="form-control" placeholder="Search...">
 				<img src="{% static 'images/search_white.png' %}" width="25" height="25">
 				<img src="{% static 'images/account.png' %}" width="25" height="25">
-				<a id="username" href="/grumblr/profile/{{ request.user.username }}">{{ user.first_name }} {{ user.last_name }} </a>
-				<a href="logout" class="btn btn-info">Sign out</a>
+				<a id="username" href="{% url 'profile' request.user.username %}">{{ request.user.first_name }} {{ request.user.last_name }} </a>
+				<a href="{% url 'logout' %}" class="btn btn-info">Sign out</a>
 			</form>
 		</div><!--/.nav-collapse -->
 	</div>
@@ -34,40 +37,26 @@
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12 col-sm-8 blog-main">
 			<span><a class="btn btn-primary" href="{% url 'follower_stream' request.user.username %}" role="button">Go To Follower Stream</a></span>
-			<form method="post" action="{% url 'post' %}">
+			{% for error in form.non_field_errors %}
+			<p style="color: red">
+			{{ error }}
+			</p>
+			{% endfor %}
+			<form id="post-form" method="post">
 				<div class="row row-offcanvas" id="post_row">
 					<div class="col-xs-10 col-sm-10 blog-main">
-						<input type="text" class="form-control" placeholder="Say something..." name="post" maxlength="42">
+						<input id='post-field' type="text" class="form-control" placeholder="Say something..." name="post" maxlength="42" required>
 					</div>
 					<div class="col-xs-1 col-sm-1 blog-main">
-						<input type="submit" class="btn btn-primary" value="Post">
+						<button id='post-button' class="btn btn-primary">Post</button>
 					</div>
 				</div>
 				{% csrf_token %}
 			</form>
 
-			{% for post in posts %}
-			<div class="blog-post">
-				<span><a href="{% url 'profile' post.user.username %}">{{ post.user.first_name }} {{ post.user.last_name }}</a></span>
-				<span>
-					{% if post.user.profile.picture.name %}
-					<img src="{% url 'photo' post.user.username %}" id="small_profile_picture">
-					{% else %}
-					<img src="{% static 'images/profile_picture.jpg' %}" id="small_profile_picture">
-					{% endif %}
-				</span>
-				<span class="time">{{post.time}}</span>
-				{% if post.user == request.user %}
-				{% elif not post.user in followees %}
-				<span><a class="btn btn-info" href="{% url 'follow' post.user.username %}" role="button">Follow</a></span>
-				{% else %}
-				<span><a class="btn btn-warning" href="{% url 'unfollow' post.user.username %}" role="button">Unfollow</a></span>
-				{% endif %}
-				<p>{{ post }}</p>
+			<!--all the posts are listed here-->
+			<div id='post-list'></div>
 
-			</div>
-			<hr>
-			{% endfor %}
 	  </div><!--/.col-xs-12.col-sm-9-->
 
 	  <div class="col-xs-6 col-sm-4 sidebar-offcanvas" id="sidebar">
@@ -86,7 +75,6 @@
 		  </div>
 	  </div><!--/.sidebar-offcanvas-->
   </div><!--/row-->
-
 
 </div><!--/.container-->
 {% endblock %}
