--- a/homework/5/webapps/grumblr/templates/post.html
+++ b/homework/5/webapps/grumblr/templates/post.html
@@ -1,14 +1,23 @@
 {% load static %}
-<div class='blog-post'>
-    <span><a href={% url 'profile' user.username %}>{{ user.first_name }} {{ user.last_name }}</a></span>
-    <span>
-        {% if user.profile.picture.name %}
-        <img src={% url 'photo' user.username %} id='small_profile_picture'>
-        {% else %}
-        <img src={% static 'images/profile_picture.jpg' %} id='small_profile_picture'>
-        {% endif %}
-    </span>
+<div class='well post-item' id='{{ post_id }}'>
+    <a href={% url 'profile' user.username %}>
+    {% if user.profile.picture.name %}
+    <img src={% url 'photo' user.username %} id='small_profile_picture'>
+    {% else %}
+    <img src={% static 'images/profile_picture.jpg' %} id='small_profile_picture'>
+    {% endif %}
+    <span>{{ user.first_name }} {{ user.last_name }}</span>
+    </a>
     <span class='time'>{{ time }}</span>
-    <p>{{ post }}</p>
+    <div>{{ post }}</div>
+
+    <div class='row row-offcanvas'>
+        <div class='col-xs-8 col-sm-8 blog-main'>
+            <input id='comment-field{{ post_id }}' type='text' class='form-control' placeholder='Leave a comment...' name='comment' maxlength='420'>
+        </div>
+        <div class='col-xs-1 col-sm-1 blog-main'>
+            <button id='comment-button' class='btn btn-primary comment-button' onclick='addComment({{ post_id }})'>Comment</button>
+        </div>
+    </div>
+    <div id='comment-list{{ post_id }}'></div>
 </div>
-<hr>
