Both tasks works fine for Global Stream now. Need to do the same for Profile page and Follower Stream page

--- a/homework/5/webapps/grumblr/static/css/mainpage.css
+++ b/homework/5/webapps/grumblr/static/css/mainpage.css
@@ -56,9 +56,23 @@ body {
 #small_profile_picture {
     height : 50px;
     width : 50px;
+    margin : 5px;
 }
 
 #comment_profile_picture {
     height : 40px;
     width : 40px;
+}
+
+.comment-block {
+    background-color: #eee;
+}
+
+.comment-list {
+    margin-top : 20px;
+}
+
+.comment-line {
+    margin-top : 15px;
+    margin-right: 60px;
 }
