--- a/homework/5/webapps/grumblr/templates/post.html
+++ b/homework/5/webapps/grumblr/templates/post.html
@@ -11,13 +11,13 @@
     <span class='time'>{{ time }}</span>
     <div>{{ post }}</div>
 
-    <div class='row row-offcanvas'>
-        <div class='col-xs-8 col-sm-8 blog-main'>
+    <div class='row row-offcanvas comment-line'>
+        <div class='col-xs-11 col-sm-11 blog-main'>
             <input id='comment-field{{ post_id }}' type='text' class='form-control' placeholder='Leave a comment...' name='comment' maxlength='420'>
         </div>
         <div class='col-xs-1 col-sm-1 blog-main'>
             <button id='comment-button' class='btn btn-primary comment-button' onclick='addComment({{ post_id }})'>Comment</button>
         </div>
     </div>
-    <div id='comment-list{{ post_id }}'></div>
+    <div id='comment-list{{ post_id }}' class='comment-list'></div>
 </div>
