--- a/homework/5/webapps/grumblr/templates/comment.html
+++ b/homework/5/webapps/grumblr/templates/comment.html
@@ -9,5 +9,5 @@
     <span>{{ user.first_name }} {{ user.last_name }}</span>
     </a>
     <span class='time'>{{ time }}</span>
-    <div>{{ content }}</div>
+    <div class='comment_content'>{{ content }}</div>
 </div>
