--- a/in-class/2016-10-12 jQuery/jQuery To-do List Demo/shared_todo_list/templates/index.html
+++ b/in-class/2016-10-12 jQuery/jQuery To-do List Demo/shared_todo_list/templates/index.html
@@ -5,7 +5,7 @@
     <title>A jQuery-enabled Shared Todo List</title>
   </head>
   <body>
-    <p>Current todo list: <ol id="todo-list"></ol></p>
+    <p>Current todo list: <div id="todo-list"></div></p>
     <p>Item to add: <input id="item-field" type="text">
        <button id="add-btn">Submit</button></p>
 
@@ -13,4 +13,3 @@
     <script src="/static/js/todo.js" type="text/javascript"></script>
   </body>
 </html>
-
