--- a/homework/5/webapps/grumblr/templates/grumblr/profile.html
+++ b/homework/5/webapps/grumblr/templates/grumblr/profile.html
@@ -5,8 +5,11 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}">
 {% endblock %}
 {% block description %}<meta name="description" content="Profile">{% endblock %}
+{% block js %}
+    <script src="{% static 'js/profile.js' %}" type="text/javascript"></script>
+{% endblock %}
 {% block content %}
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top" name="{{ user.username }}">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target = "#navbar" aria-expanded="false" aria-controls="navbar">
@@ -78,29 +81,8 @@
 		</div><!--/.profile info-->
 
 		<div class="col-xs-12 col-sm-6 blog-main">
-			{% for post in posts %}
-			<form method="post" action="{% url 'delete' post.id %}" >
-				<div class="blog-post">
-					<span><a href="{% url 'profile' post.user.username %}">{{ post.user.first_name }} {{ post.user.last_name }}</a></span>
-					<span>
-						{% if profile.picture.name %}
-						<img src="{% url 'photo' user.username %}" id="small_profile_picture">
-						{% else %}
-						<img src="{% static 'images/profile_picture.jpg' %}" id="small_profile_picture">
-						{% endif %}
-					</span>
-					<span class="time">{{post.time}}</span>
-
-					<p>{{ post }}</p>
-					<span class="btn btn-default" href="#" role="button">Like</span>
-					{% if request.user.username == user.username %}
-					<span> <input type="submit" class="btn btn-danger delete-btn" value="Delete"></span>
-					{% endif %}
-				</div>
-				<hr>
-				{% csrf_token %}
-			</form>
-			{% endfor %}
+			<!--all the posts are listed here-->
+			<div id='post-list'></div>
 		</div>
 
 	</div><!--/row-->
