--- a/in-class/2016-10-12 jQuery/jQuery exercise/sio/templates/sio.html
+++ b/in-class/2016-10-12 jQuery/jQuery exercise/sio/templates/sio.html
@@ -4,7 +4,7 @@
     <title>Student Information Online Webapp</title>
     <meta charset="utf-8">
     {% load static %}
-    <script src="{% static "jquery-3.1.1.min.js" %}"></script>
+    <script src="{% static 'jquery-3.1.1.min.js' %}"></script>
 </head>
 
 <body>
