--- a/homework/5/webapps/grumblr/templates/grumblr/follower_stream.html
+++ b/homework/5/webapps/grumblr/templates/grumblr/follower_stream.html
@@ -27,7 +27,7 @@
 				<img src="{% static 'images/search_white.png' %}" width="25" height="25">
 				<img src="{% static 'images/account.png' %}" width="25" height="25">
 				<a id="username" href="{% url 'profile' request.user.username %}">{{ user.first_name }} {{ user.last_name }} </a>
-				<a href="{% url 'logout' %}" class="btn btn-info">Sign out</a>
+				<a href="{% url 'logout' %}" class="btn btn-success">Sign out</a>
 			</form>
 		</div><!--/.nav-collapse -->
 	</div>
