--- a/homework/5/webapps/grumblr/templates/grumblr/mainpage.html
+++ b/homework/5/webapps/grumblr/templates/grumblr/mainpage.html
@@ -27,7 +27,7 @@
 				<img src="{% static 'images/search_white.png' %}" width="25" height="25">
 				<img src="{% static 'images/account.png' %}" width="25" height="25">
 				<a id="username" href="{% url 'profile' request.user.username %}">{{ request.user.first_name }} {{ request.user.last_name }} </a>
-				<a href="{% url 'logout' %}" class="btn btn-info">Sign out</a>
+				<a href="{% url 'logout' %}" class="btn btn-success">Sign out</a>
 			</form>
 		</div><!--/.nav-collapse -->
 	</div>
@@ -36,7 +36,7 @@
 <div class="container">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12 col-sm-8 blog-main">
-			<span><a class="btn btn-primary" href="{% url 'follower_stream' request.user.username %}" role="button">Go To Follower Stream</a></span>
+			<span><a class="btn btn-primary" href="{% url 'follower_stream' %}" role="button">Go To Follower Stream</a></span>
 			{% for error in form.non_field_errors %}
 			<p style="color: red">
 			{{ error }}
