--- a/homework/5/webapps/grumblr/static/css/mainpage.css
+++ b/homework/5/webapps/grumblr/static/css/mainpage.css
@@ -1,25 +1,10 @@
+@import "base.css";
+
 body {
   padding-top: 120px;
   padding-bottom: 40px;
 }
 
-/*.blog-post {
-    background-color: #eee;
-}*/
-
-
-.navbar {
-  background-color: #0085ff;
-  border-color: #0000ff;
-}
-
-.nav .navbar-nav .navbar-right li a {
-  color: #333300;
-}
-
-.navbar .navbar-brand {
-  color: #ddd;
-}
 
 .time {
     color: #999;
@@ -29,10 +14,6 @@ body {
 
 .list-group {
   margin-left: 30px;
-}
-
-.list-group-item.active {
-  background-color: #0085ff;
 }
 
 .blog-post {
@@ -47,37 +28,4 @@ body {
   position: absolute;
   top:7px;
   right:5px;
-}
-
-#post_row {
-    padding: 15px;
-}
-
-#small_profile_picture {
-    height : 50px;
-    width : 50px;
-    margin : 5px;
-}
-
-#comment_profile_picture {
-    height : 40px;
-    width : 40px;
-    margin : 5px;
-}
-
-.comment-block {
-    background-color: #eee;
-}
-
-.comment-list {
-    margin-top : 20px;
-}
-
-.comment-line {
-    margin-top : 15px;
-    margin-right: 60px;
-}
-
-.post_content, .comment_content {
-    margin : 5px;
 }
