--- a/homework/5/webapps/grumblr/static/css/profile.css
+++ b/homework/5/webapps/grumblr/static/css/profile.css
@@ -1,36 +1,19 @@
+@import "base.css";
+
 body {
   padding-top: 50px;
   padding-bottom: 40px;
 }
 
-/*.blog-post {
-    background-color: #eee;
-}*/
-
 .container {
     padding-top: 20px;
 }
 
-.navbar {
-    background-color: #0085ff;
-    border-color: #0000ff;
-}
-
-.nav .navbar-nav .navbar-right li a {
-    color: #333300;
-}
-
-.navbar .navbar-brand {
-    color: #ddd;
-}
 
 .list-group {
     margin-left: 30px;
 }
 
-.list-group-item.active {
-    background-color: #0085ff;
-}
 
 .time {
     color: #999;
@@ -113,4 +96,8 @@ body {
 .comment-line {
     margin-top : 15px;
     margin-right: 60px;
+}
+.btn-edit, .btn-follow, .btn-unfollow {
+    position: absolute;
+    right: 10px;
 }
