--- a/homework/5/webapps/grumblr/templates/comment.html
+++ b/homework/5/webapps/grumblr/templates/comment.html
@@ -1,13 +1,15 @@
 {% load static %}
 <div class='well comment-block'>
-    <a href={% url 'profile' user.username %}>
-    {% if user.profile.picture.name %}
-    <img src={% url 'photo' user.username %} id='comment_profile_picture'>
-    {% else %}
-    <img src={% static 'images/profile_picture.jpg' %} id='comment_profile_picture'>
-    {% endif %}
-    <span>{{ user.first_name }} {{ user.last_name }}</span>
-    </a>
-    <span class='time'>{{ time }}</span>
+    <div class='comment-header'>
+        <a  href={% url 'profile' user.username %}>
+        {% if user.profile.picture.name %}
+        <img src={% url 'photo' user.username %} id='comment_profile_picture'>
+        {% else %}
+        <img src={% static 'images/profile_picture.jpg' %} id='comment_profile_picture'>
+        {% endif %}
+        <span>{{ user.first_name }} {{ user.last_name }}</span>
+        </a>
+        <span class='time'>{{ time }}</span>
+    </div>
     <div class='comment_content'>{{ content }}</div>
 </div>
