--- a/homework/5/webapps/grumblr/templates/post.html
+++ b/homework/5/webapps/grumblr/templates/post.html
@@ -1,15 +1,18 @@
 {% load static %}
 <div class='well post-item' id='{{ post_id }}'>
-    <a href={% url 'profile' user.username %}>
-    {% if user.profile.picture.name %}
-    <img src={% url 'photo' user.username %} id='small_profile_picture'>
-    {% else %}
-    <img src={% static 'images/profile_picture.jpg' %} id='small_profile_picture'>
-    {% endif %}
-    <span>{{ user.first_name }} {{ user.last_name }}</span>
-    </a>
-    <span class='time'>{{ time }}</span>
-    <div class='post_content'>{{ post }}</div>
+
+    <span><!--profile picture-->
+        {% if user.profile.picture.name %}
+        <img src={% url 'photo' user.username %} id='small_profile_picture'>
+        {% else %}
+        <img src={% static 'images/profile_picture.jpg' %} id='small_profile_picture'>
+        {% endif %}
+    </span>
+    <span><!--user's name, time, and post content-->
+        <span><a href={% url 'profile' user.username %}>{{ user.first_name }} {{ user.last_name }}</a></span>
+        <span class='time'>{{ time }}</span>
+        <div class='post_content'>{{ post }}</div>
+    </span>
 
 
     <span class='btn btn-default' href='#' role='button'>Like</span>
@@ -24,7 +27,7 @@
             <input id='comment-field{{ post_id }}' type='text' class='form-control' placeholder='Leave a comment...' name='comment' maxlength='420'>
         </div>
         <div class='col-xs-1 col-sm-1 blog-main'>
-            <button id='comment-button' class='btn btn-primary comment-button' onclick='addComment({{ post_id }})'>Comment</button>
+            <button name='comment-button{{ post_id }}' class='btn btn-primary comment-button' onclick='addComment({{ post_id }})'>Comment</button>
         </div>
     </div>
     <div id='comment-list{{ post_id }}' class='comment-list'></div>
